tests/baselines/reference/scopeCheckExtendedClassInsidePublicMethod2(strict=true).errors.txt
scopeCheckExtendedClassInsidePublicMethod2.ts(1,19): error TS7008: Member 'v' implicitly has an 'any' type.
scopeCheckExtendedClassInsidePublicMethod2.ts(1,29): error TS7008: Member 'p' implicitly has an 'any' type.
scopeCheckExtendedClassInsidePublicMethod2.ts(1,39): error TS7008: Member 's' implicitly has an 'any' type.
scopeCheckExtendedClassInsidePublicMethod2.ts(4,7): error TS2663: Cannot find name 'v'. Did you mean the instance member 'this.v'?
scopeCheckExtendedClassInsidePublicMethod2.ts(6,7): error TS2662: Cannot find name 's'. Did you mean the static member 'D.s'?


==== scopeCheckExtendedClassInsidePublicMethod2.ts (5 errors) ====
    class C { private v; public p; static s; }
                      ~
!!! error TS7008: Member 'v' implicitly has an 'any' type.
                                ~
!!! error TS7008: Member 'p' implicitly has an 'any' type.
                                          ~
!!! error TS7008: Member 's' implicitly has an 'any' type.
    class D extends C {
       public c() {
          v = 1;
          ~
!!! error TS2663: Cannot find name 'v'. Did you mean the instance member 'this.v'?
          this.p = 1;
          s = 1;
          ~
!!! error TS2662: Cannot find name 's'. Did you mean the static member 'D.s'?
       }
    }